Added SEC and KeyWords

--- a/index.html
+++ b/index.html
@@ -2,9 +2,94 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HARISH PRABHU Portfolio</title>
+
+    <!-- 🏆 Primary SEO Meta Tags -->
+    <title>Harish Prabhu | React Native & Full Stack Developer Portfolio</title>
+    <meta
+      name="description"
+      content="Welcome to the portfolio of Harish Prabhu — a passionate React Native and Full Stack Developer specializing in building modern, cross-platform mobile and web applications using React, Angular, Node.js, and Firebase."
+    />
+    <meta
+      name="keywords"
+      content="Harish Prabhu, Harish Prabhu Portfolio, Harish Prabhu Sivakasi, Harish Prabhu Developer, React Native Developer, Full Stack Developer, Mobile App Developer, Web Developer, Angular Developer, Node.js Developer, JavaScript Developer, TypeScript Developer, Firebase Developer, Cross Platform Developer, React Developer, Frontend Developer, Backend Developer, Full Stack Projects, Software Engineer Portfolio, Indian App Developer, MCA Student, Sivakasi Developer, Freelance React Native Developer, Netlify Portfolio"
+    />
+    <meta name="author" content="Harish Prabhu" />
+
+    <!-- 🌐 Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://harishprabhu.netlify.app/" />
+    <meta
+      property="og:title"
+      content="Harish Prabhu | React Native & Full Stack Developer"
+    />
+    <meta
+      property="og:description"
+      content="Explore the portfolio of Harish Prabhu — a React Native & Full Stack Developer skilled in creating cross-platform mobile and web apps using modern technologies."
+    />
+    <meta
+      property="og:image"
+      content="https://harishprabhu.netlify.app/preview.png"
+    />
+
+    <!-- 🐦 Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://harishprabhu.netlify.app/" />
+    <meta
+      name="twitter:title"
+      content="Harish Prabhu | React Native & Full Stack Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Welcome to Harish Prabhu's developer portfolio — explore projects in React Native, Angular, Node.js, and Firebase."
+    />
+    <meta
+      name="twitter:image"
+      content="https://harishprabhu.netlify.app/preview.png"
+    />
+
+    <!-- 🔍 Schema.org Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Harish Prabhu",
+        "url": "https://harishprabhu.netlify.app",
+        "jobTitle": "React Native & Full Stack Developer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Freelance / MCA Student Projects"
+        },
+        "alumniOf": "Master of Computer Applications (MCA)",
+        "sameAs": [
+          "https://www.linkedin.com/in/harish-prabhu-bb33bb233",
+          "https://www.instagram.com/_harish_prabhu/?igsh=czk0dG9lZGQycjhi#",
+          "https://www.facebook.com/harish.prabhu.39982?mibextid=qi2Omg&rdid=4vi5KKmTXWollVzA&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F151zrtGsDwX%2F%3Fmibextid%3Dqi2Omg#"
+        ],
+        "knowsAbout": [
+          "React Native",
+          "React.js",
+          "Angular",
+          "Node.js",
+          "Firebase",
+          "MongoDB",
+          "JavaScript",
+          "TypeScript",
+          "Frontend Development",
+          "Backend Development",
+          "Full Stack Development",
+          "Cross Platform Apps",
+          "Mobile App Development",
+          "Web Development",
+        ]
+      }
+    </script>
+
+    <!-- 🗺️ Sitemap and Robots (for crawlers) -->
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+    <meta name="robots" content="index, follow" />
+
   </head>
   <body>
     <div id="root"></div>
