Adding Google Verification file 1

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="google-site-verification" content="RT3aCBpIE8ipbbPQnbQQq1zY0S_OTbzA-HJMD4zpMmM" />
     <!-- 🏆 Primary SEO Meta Tags -->
     <title>Harish Prabhu | React Native & Full Stack Developer Portfolio</title>
     <meta
